@startuml School Management System

skinparam Linetype ortho
skinparam classAttributeIconSize 0
hide circle

class User {
  # userType
  # userID
  # username
  # password
  # email
  # firstName
  # lastName
  # fullName
  # dateOfBirth
  # fingerprint
  + viewUser()
  + createUser()
  + updateUser()
  + deleteUser()
  + informUser()
  + login()
  + logout()
}

class Student {
  - studentID
  - studentSection
  - studentgrade
  - studentClass
  - studentReport
  + viewStudent()
  + createStudent()
  + updateStudent()
  + deleteStudent()
  + informStudent()
}

class Teacher {
  # gradeValue
  # teacherID
  # teacherSubjects
  # teacherClass
  # teacherSection
  # teacherReport
  + viewTeacher()
  + createTeacher()
  + updateTeacher()
  + deleteTeacher()
  + informTeacher()
}

class SectionalHead {
  - section
  - sectionalHeadReport
  + viewSectionalHead()
  + createSectionalHead()
  + updateSectionalHead()
  + deleteSectionalHead()
  + viewSectionalHeadReport()
  + generateSectionalHeadReport()
  + informSectionalHead()
}

class Principal {
  - principalID
  - principalType
  + viewPrincipal()
  + createPrincipal()
  + updatePrincipal()
  + deletePrincipal()
  + informPrincipal()
  + informUsers()
}

class Admin {
  - adminID
  - adminType
  - viewSystemDatabase()
  - editSystemDatabase()
  - viewUsers()
  - editUsers()
  - viewSystemMonitor()
  - systemBackups()
  - viewBackups()
  - restoreBackups()
}

class Section {
  - section
  - sectionalHead
  - sectionStudents
  - sectionTeachers
  - sectionSubjects
  + viewSection()
  + createSection()
  + updateSection()
  + deleteSection()
  + informSection()
}

class Class {
  - class
  - classTeacher
  - classMonitor
  - classStudents
  + viewClassStudents()
  + addClassStudents()
  + removeClassStudents()
  + addClassMonitor()
  + removeClassMonitor()
  + addClassTeacher()
  + removeClassTeacher()
  + viewTimeTable()
  + editTimeTable()
  + viewClass()
  + createClass()
  + updateClass()
  + deleteClass()
  + viewClassReport()
  + viewAttendance()
}

class TimeTable {
  - timeTableID
  - timeTableClass
  - timeTableTeacher
  - timeTableSection
  + viewTimeTable()
  + createTimeTable()
  + updateTimeTable()
  + deleteTimeTable()
}

class Attendance {
  - attendanceID
  - attendanceDate
  - attendanceTime
  + viewAttendance()
  + markAttendance()
  + updateAttendance()
  + deleteAttendance()
}

class Exam {
  - id
  - name
  - type
  - description
  - date
  - duration
  - medium
  + viewExams()
  + createExam()
  + updateExam()
  + deleteExam()
}

class Result {
  - id
  - studentName
  - marks
  - grade
  - updateDate
  + viewResult()
  + createResult()
  + updateResult()
  + deleteResult()
  + applyForRecorrection()
}

class Assessment {
  - id
  - title
  - description
  - attachedFiles
  - dueDate
  - medium
  + viewAssessment()
  + creatAssessment()
  + updateAssessment()
  + deleteAssessment()
  + gradeAssessment()
  + submitSubmission()
  + manageSubmission()
}

class Submission {
  - id
  - content
  - attachedFiles
  - submissionDate
  - submissionTime
  - marks
  - grade
  + viewSubmission()
  + createSubmission()
  + updateSubmission()
  + deleteSubmission()
  + gradeSubmission()
  + sortSubmission()
}

class Subject {
  - subjectName
  - subjectContent
  - creditPoints
  - hours
  - subjectContent
  + addContent()
  + removeContent()
  + viewSubject()
  + createSubject()
  + updateSubject()
  + deleteSubject()
}

class Report {
  - reportID
  - reportTitle
  - reportContent
  - reportDate
  - reportTime
  - reportType
  + viewReport()
  + generateReport()
  + updateReport()
  + deleteReport()
}

User <|-- Student
User <|-- Teacher
Teacher <|-- SectionalHead
SectionalHead <|-- Principal
Principal <|-- Admin

Section "1" *-- "1..*" Teacher : Has
Section "1" *-- "1..*" Class : Has
Section "1" *-- "1..*" Subject : Has
Section "1" o-- "1..*" Exam : Has
Section "1" o-- "1..*" Report : Has
Class "1" -- "1" Attendance : Access
Class "1" -- "1" Report : Access
Class "1" -- "1..*" Student : Access
Class "1" -- "1" TimeTable : Has
Assessment "1" -- "0..*" Submission : Has
Assessment "1" *-- "1"  Subject : Has
Exam "1" o-- "0..*" Result : Has
Exam "1" *-- "1..*" Subject : Has
Result "1" *-- "1" Subject : Has
Admin "1" -- "1..*" User : Access
Principal "1" -- "1..*" SectionalHead : Access
SectionalHead "1" -- "1" Section : Access
SectionalHead "1" -- "1..*" Teacher : Access
Teacher "1" -- "0..1" Class : Access
Teacher "1" -- "1..*" Subject : Access
Teacher "1" -- "1..*" Assessment : Access
Teacher "1" -- "1..*" Submission : Access
Teacher "1" -- "1..*" Exam : Access
Teacher "1" -- "1..*" Student : Access
Student "1" -- "1..*" Subject : Access
Student "1" -- "1..*" Exam : View
Student "1" o-- "0..*" Result : Has
Student "1" -- "0..*" Assessment : Submit

@enduml